Project Layout Bug Fix

--- a/returngame/src/App.css
+++ b/returngame/src/App.css
@@ -97,8 +97,8 @@ h1 {
 }
 
 h3 {
-  margin-top: 10px;
   font-weight: 200;
+  margin-bottom: 10px;
 }
 
 h4 {
@@ -318,15 +318,13 @@ iframe {
 .comments-section {
   margin-top: 20px;
   border-top: 1px solid #eee;
-  padding-top: 20px;
   width: 100%;
 }
 
 .comment-form {
   margin-top: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   background-color: #f9f9f9;
-  padding: 20px;
   border-radius: 8px;
 }
 
@@ -374,8 +372,6 @@ iframe {
   border: 1px solid #eee;
   border-radius: 8px;
   padding: 15px;
-  margin-left:15px;
-  margin-right:15px;
   margin-bottom: 15px;
   position: relative;
 }
@@ -426,21 +422,16 @@ iframe {
 
 .project-layout {
   display: grid;
-<<<<<<< HEAD
-  grid-template-columns: 400px 960px 400px; /* 2열 레이아웃 유지 */
-=======
-  grid-template-columns: 3fr 1fr; /* 2열 레이아웃 유지 */
->>>>>>> parent of 30c2e46 (Project Layout)
+  grid-template-columns: 400fr 960fr 400fr; /* 2열 레이아웃 유지 */
   margin-bottom: 15px;
   gap: 20px;
   width: 100%;
   height: 700px;
   padding: 20px;
-  align-content: center;
 }
 
 .game-instructions {
-  order: 2; /* Moves the game description to the right */
+  order: 1; /* Moves the game description to the right */
 }
 
 .instruction-box {
@@ -471,7 +462,8 @@ iframe {
 }
 
 .game-container {
-  order: 1;
+  order: 2;
+  height: 700px;
 }
 
 .game-frame-wrapper {
@@ -482,8 +474,8 @@ iframe {
 
 
 .ratings-comments-wrapper {
-  margin-top: 50px; /* 평점 및 댓글 창과 게임 레이아웃 사이 여백 추가 */
   width: 100%;
+  order: 3;
 }
 
 /* Change to 16:9 ratio (56.25% = 9/16 * 100) */
@@ -506,9 +498,9 @@ iframe {
 
 .ratings-comments {
   background-color: #f9f9f9;
-  border-radius: 8px;
-  padding: 20px;
-  margin-top: 20px;
+  border-radius: 10px;
+  padding-left:20px;
+  padding-right:20px;
 }
 
 
@@ -521,7 +513,7 @@ iframe {
 .comments-section {
   background-color: #f9f9f9;
   border-radius: 8px;
-  padding: 20px;
+  padding-top:20px;
 }
 
 .comments-list {
